# oilmm

./: .coveragerc  .gitignore  .travis.yml  LICENCE.txt  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_experiments.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: Makefile  api.rst  conf.py
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/oilmm/: ilmm.html  oilmm.html  util.html
docs/_build/html/_sources/: api.rst.txt  readme.rst.txt
docs/_build/html/_sources/source/: oilmm.ilmm.rst.txt  oilmm.oilmm.rst.txt  oilmm.util.rst.txt
docs/_build/html/source/: oilmm.ilmm.html  oilmm.oilmm.html  oilmm.util.html
experiments/: eeg.py  eeg_alt.py  eeg_igp.py  eeg_ilmm.py  exchange.py  exchange_igp.py  exchange_ilmm.py  jura.py  jura_igp.py  jura_ilmm.py  simulators.py  simulators_process.py  temperature.py  temperature_igp.py  temperature_parse.py  timing.py  timing_parse.py  util.py
oilmm/: __init__.py  autograd.py  ilmm.py  imogp.py  jax.py  mogp.py  oilmm.py  tensorflow.py  test.py  torch.py  util.py
olmm/: __init__.py  olmm.py
tests/: __init__.py  test_ilmm.py  test_model.py  test_oilmm.py  test_olmm.py  test_util.py  util.py
