[metadata]
name = oilmm
version = 0.3.1
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Implementation of the Instantaneous Orthogonal Linear Mixing Model
url = https://github.com/wesselb/oilmm
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
